notification navbar maybe

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,6 +40,9 @@
                     <a class="nav-link" aria-current="page" href="{{ url_for('account') }}">Account</a>
                 </li>
             </ul>
+{#            <a href="{{ url_for('notifications') }}">#}
+{#                🔔 通知 ({{ unread_count }})#}
+{#            </a>            #}
         </div>
     </div>
 </nav>
