--- a/Assignment/app/templates/assignment_detail.html
+++ b/Assignment/app/templates/assignment_detail.html
@@ -20,11 +20,19 @@
         <p>{{ assignment.professor.username }}</p>
     </div>
     {% if current_user.is_authenticated and current_user.id == assignment.professor_id %}
-        <a class="btn btn-warning mb-3" href="{{ url_for('edit_assignment', assignment_id=assignment.id) }}">
+    <div class="d-flex mb-3">
+        <a class="btn btn-primary me-2" href="{{ url_for('edit_assignment', assignment_id=assignment.id) }}">
             Edit Assignment
         </a>
+        <form action="{{ url_for('delete_assignment', assignment_id=assignment.id) }}" method="post">
+            <button type="submit" class="btn btn-danger me-2" onclick="return confirm('Are you sure you want to delete this assignment?');">
+                Delete Assignment
+            </button>
+        </form>
+    </div>
     {% endif %}
-    <br>
-    <a class="btn btn-secondary" href="{{ url_for('assignments') }}">Back to List</a>
+    <div class="d-flex">
+        <a class="btn btn-secondary" href="{{ url_for('assignments') }}">Back to List</a>
+    </div>
 </div>
 {% endblock %}
