--- a/app/templates/my_assignments.html
+++ b/app/templates/my_assignments.html
@@ -2,15 +2,18 @@
 
 {% block content %}
 <h1>My Assignments</h1>
-<u1 class="list-group">
+<ul class="list-group">
     {% for assignment in assignments %}
-     <li class="list-group-item d-flex justified-content-between align-items-center">
-         <div>
-             <strong>{{  assignment.title  }}</strong>
-             <small>{{  assignment.description  }}</small>
-         </div>
-         <a href="{{ url_for('submit_assignment', assignment_id=assignment.id)  }}" class="btn btn-primary btn-sm">Submit</a>
-     </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+            <div>
+                <strong>{{ assignment.title }}</strong><br>
+                <small>{{ assignment.description }}</small><br>
+                <small>Due: {{ assignment.deadline }}</small>
+            </div>
+            <a href="{{ url_for('submit_assignment', assignment_id=assignment.id) }}" class="btn btn-primary btn-sm">Submit</a>
+        </li>
+    {% else %}
+        <li class="list-group-item">No assignments available.</li>
     {% endfor %}
-</u1>
+</ul>
 {% endblock %}
