--- a/app/templates/activity.html
+++ b/app/templates/activity.html
@@ -47,7 +47,7 @@
             {% endif %}
         </form>
     {% endif %}
-    {% if is_creator %}
+    {% if is_creator and activity.date >= now %}
         <div class="mt-4">
             <a href="{{ url_for('edit_activity', id=activity.id) }}" class="btn btn-secondary">Edit Activity</a>
         </div>
